# Artex

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edge/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: viewer.ts
